--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
 <title>Distance Matrix Sample</title> 
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
 <script type="text/javascript"> 
- 
+  // Arrays for the origins and destinations inputs
   var origins = new Array();
- 
   var destinations = new Array();
  
+  // Initial query parameters
   var query = {
     travelMode: google.maps.TravelMode.DRIVING,
     unitSystem: google.maps.UnitSystem.METRIC
   };
- 
+
+  // Google Distance Matrix Service 
   var dms;
+
+  // Interval and Limit values for tracking origins groupings (for staying within QUERY_LIMIT)
   var originsInterval = 0;
   var originsLimit;
   
+  // Query Limit - 100 is the non-premier query limit as of this update
   var QUERY_LIMIT = 100;
   
+  /*
+   * Updates the query, then uses the Distance Matrix Service
+   */
   function updateMatrix() {
     updateQuery();
     dms.getDistanceMatrix(query, function(response, status) {
@@ -32,7 +39,10 @@
       }
     );
   }
- 
+  
+  /*
+   * Generates a table in 'matrix' element for populating dms results
+   */
   function createTable() {
     var table = document.getElementById('matrix');
     var tr = addRow(table);
@@ -56,7 +66,7 @@
   
   /*
    * Retrieves origins and destinations from textareas and
-   * determines how to build the entire matrix within query limitations.
+   * determines how to build the entire matrix within query limitations
    */
   function getInputs(){
     var originsString = document.getElementById('origins').value;
@@ -73,7 +83,7 @@
   }
   
   /*
-   * Updates the query based on the known sizes of origins and destinations.
+   * Updates the query based on the known sizes of origins and destinations
    */
   function updateQuery(){
     if(origins.length * destinations.length < QUERY_LIMIT && originsLimit < 25){
@@ -86,7 +96,7 @@
   } 
   
   /*
-   * Initializes the matrix data and pulls the first set of near 100 results.
+   * Initializes the matrix data and pulls the first set of near 100 results
    */
   function matrixInit(){
     dms = new google.maps.DistanceMatrixService();
@@ -96,6 +106,10 @@
     disableInitButton();
   } 
   
+  /*
+   * Accepts rows and populates table content.  Error validation is limited to the "ZERO_RESULTS"
+   * return status.  originsLimit and originsInterval are used to find the correct table cell.
+   */
   function populateTable(rows) {
     var elementX;
     for (var i = 0; i < rows.length; i++) {
@@ -105,10 +119,10 @@
             var distance = rows[i].elements[j].distance.text;
             var duration = rows[i].elements[j].duration.text;
             var td = document.getElementById('element-' + elementX + '-' + j);
-            td.innerHTML = distance + "<br/>" + duration;
+            td.innerHTML = distance + "<br />" + duration;
         }else{
             var td = document.getElementById('element-' + elementX + '-' + j);
-            td.innerHTML = "No results available," + "<br/>" + "Check your location.";                        
+            td.innerHTML = "No results available," + "<br />" + "Check your location.";                        
         }
       }
     }
@@ -119,7 +133,10 @@
         disableUpdateButton(true);
     }
   }
- 
+  
+  /*
+   * Updates the query parameter for unitSystem when the unit select option is changed
+   */
   function updateUnits() {
     switch (document.getElementById("units").value) {
       case "km":
@@ -132,12 +149,18 @@
     updateMatrix();
   }
  
+  /*
+   * Adds a row to the provided table element
+   */
   function addRow(table) {
     var tr = document.createElement('tr');
     table.appendChild(tr);
     return tr;
   }
- 
+  
+  /*
+   * Adds a cell with provided id to the provided row
+   */
   function addElement(tr, id) {
     var td = document.createElement('td');
     if (id) {
@@ -145,6 +168,20 @@
     }
     tr.appendChild(td);
     return td;
+  }
+  
+  /*
+   * Disables a button using the provided elementId
+   */
+  function disableButton(buttonId){
+    document.getElementById(buttonId).disabled=true;
+  }
+  
+  /*
+   * Enables a button using the provided elementId
+   */
+  function enableButton(buttonId){
+    document.getElementById(buttonId).disabled=false;
   }
   
   function disableInitButton(){
@@ -178,6 +215,9 @@
     document.getElementById('clearButton').disabled=false;
   }
   
+  /*
+   * Clears the results table and resets button states
+   */
   function clearTable(){
     var table = document.getElementById('matrix');
     var rowCount = table.rows.length;
@@ -191,6 +231,19 @@
        
     disableClearButton();
     enableInitButton();
+  }
+  
+  function instructionsShowHide(){
+    var instructions = document.getElementById('instructions');
+    var instructionsLink = document.getElementById('instructionsLink');
+    if(instructions.style.display == "none"){
+        instructions.style.display = "block";
+        instructionsLink.innerHTML = "Hide Instructions";
+    }else{
+        instructions.style.display = "none";
+        instructionsLink.innerHTML = "Show Instructions";
+    }
+    
   }
 </script> 
 <style> 
@@ -209,14 +262,18 @@ body {
   border-collapse: collapse;
 }
  
-#controls {
-  
-}
- 
 .origin,.destination {
   font-weight: bold;
   text-align: center;
   background-color: #e0ffe0;
+}
+ 
+#instructions {
+  padding: 10px;
+} 
+
+#queryInputs{
+  margin-top: 10px;
 }
  
 td {
@@ -225,12 +282,24 @@ td {
   cursor: default;
   background-color: #ffffff;
 }
+
+a {
+  text-decoration: underline;
+  color: blue;
+  cursor: pointer;
+}
+  
+input, select, textarea{
+  margin: 10px 10px 15px 10px;
+}
   
 </style> 
 </head> 
 <body> 
 <div id="container"> 
   <div id="controls"> 
+    <a id="instructionsLink" onclick="instructionsShowHide()">Hide Instructions</a>
+    <div id="instructions">
     Enter pipe delimited origins and destinations.  Optionally, modify the output units to specify imperial or metric results (default is metric); due to the results limitations, changes to the unit system will only affect future requests - it will not affect data already present in the table.  You must limit your destinations to 25 in this utility.  Acceptable values for origins or destinations are:<br />
     <ul>
         <li>Text that Google identifies as a single location</li>
@@ -246,9 +315,9 @@ td {
         <li>36 -75|34.222,-300.444</li>
         <li>Lewiston|Midland</li>
     </ul>
-    <br />
-    Unit System:<br />
+    </div>  
     <form id="queryInputs">
+        Unit System:<br />
         <select id="units" onChange="updateUnits()"> 
           <option value="km"  selected="selected">Metric</option> 
           <option value="mi">Imperial</option> 
