Adds comment to the instructionsShowHide function

--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
     enableButton('initButton');
   }
   
+  /*
+   * Shows/Hides instructions when link is clicked.
+   */
   function instructionsShowHide(){
     var instructions = document.getElementById('instructions');
     var instructionsLink = document.getElementById('instructionsLink');
